--- a/OnnurOnn/Vefforritun/Project1/style.css
+++ b/OnnurOnn/Vefforritun/Project1/style.css
@@ -1,31 +1,38 @@
 /*hello there*/
+
+* {
+    font-family:"Montserrat";
+}
+
 body {
     background-color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-#container {
+
+.container {
     background-color: white;
 }
-#header {
+
+.header {
     background-color: #AED8E6;
     text-align: center;
     border: 3px black solid;
     border-radius: 10px;
-
 }
-#content {
+
+.content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #eee0ee;
+    width: 80%;
+    padding-left: 10%;
 }
 
-#person1, #person2, #person3, #person4, #person5 {
+.person1, .person2, .person3, .person4, .person5 {
     width: 300px;
     height: 200px;
     background-color: #AED8E6;
     flex-direction: row;
-    flex-basis: auto;
     border: 3px black solid;
     border-radius: 10px;
     margin: 20px;
@@ -42,7 +49,7 @@ img {
     padding-top: 10px;
 }
 
-#footer {
+.footer {
     margin: auto;
     background-color: #AED8E6;
     padding: 10px;
@@ -54,25 +61,29 @@ img {
     max-width: 800px;
     height: 200px;
 }
-#about, #contact {
+
+.about, .contact {
     flex-direction: row;
 }
-#contact {
+
+.contact {
     text-align: right;
 }
-#about {
+
+.about {
     text-align: left;
     word-wrap: break-word;
 }
+
 @media screen and (max-width: 650px) {
-    #person1, #person2, #person3, #person4, #person5 {
+    .person1, .person2, .person3, .person4, .person5 {
     flex-direction: column;
     flex-wrap: wrap;
     }
 }
 
 @media screen and (min-width: 1000px) {
-    #person1, #person2, #person3, #person4, #person5 {
+    .person1, .person2, .person3, .person4, .person5 {
         width: 200px;
         height: 200px;
         flex-wrap: wrap;
