--- a/OnnurOnn/Vefforritun/Project1/style.css
+++ b/OnnurOnn/Vefforritun/Project1/style.css
@@ -17,16 +17,22 @@ body {
     text-align: center;
     border: 3px black solid;
     border-radius: 10px;
-    max-height: 100px;
+    min-height: 100px;
 }
 
-table, th, tr {
+#header_table, .header_tr {
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
-    width: 150px;
-    table-layout: fixed;
+    width: 250px;
+    table-layout: initial;
     vertical-align: top;
+}
+.person_txt {
+    text-align: center;
+}
+h1{
+    margin: 0;
+    height: 50px;
 }
 #fire_header {
     text-align: right;
@@ -59,16 +65,19 @@ table, th, tr {
     border-radius: 10px;
     margin: 20px;
     padding: 20px 20px 20px 20px;
-    padding-bottom: 20px;
 
 }
+.person_txt {
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+}
 img {
-    max-width: 30%;
-    height: 30%;
+
+    width: 50px;
+    height: 50px;
     padding: 5px;
     float: left;
-    padding-left: 20px;
-    padding-top: 10px;
 }
 
 .footer {
@@ -82,6 +91,7 @@ img {
     border-radius: 10px;
     max-width: 800px;
     height: 200px;
+    text-align: justify;
 }
 
 .about, .contact {
